[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Selection Pane/Cars in a Grid.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/ArrowsIdle.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Arrowhovered.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Vehicle select.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/next.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/nextbuttonh.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/choose your car.png" type="Texture" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.40335, 0.40335 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1328.87, 952.026 )
scale = Vector2( 0.516569, 0.510014 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
region_enabled = true
region_rect = Rect2( -99, 286, 7029, 3245 )

[node name="prev" type="TextureButton" parent="."]
margin_left = 317.342
margin_top = 1058.63
margin_right = 1617.34
margin_bottom = 1946.63
rect_rotation = -180.0
rect_scale = Vector2( 0.232758, 0.232758 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="next" type="TextureButton" parent="."]
margin_left = 2161.89
margin_top = 852.857
margin_right = 3461.89
margin_bottom = 1740.86
rect_scale = Vector2( 0.232758, 0.232758 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 337.176
margin_top = 297.508
margin_right = 3630.18
margin_bottom = 2670.51
rect_rotation = 180.0
rect_scale = Vector2( 0.0674381, 0.0674381 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 872.691
margin_top = 99.1694
margin_right = 4673.69
margin_bottom = 1102.17
rect_scale = Vector2( 0.282276, 0.282276 )
texture_normal = ExtResource( 7 )

[connection signal="pressed" from="prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
